--- a/templates/views/home.hbs
+++ b/templates/views/home.hbs
@@ -15,31 +15,49 @@
     {{>navbar}}
     <section>
         <div class="carousel_hero">
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+
+            <div id="carousel1" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-bs-target="#carousel1" data-bs-slide-to="0" class="active"></li>
+                    <li data-bs-target="#carousel1" data-bs-slide-to="1"></li>
+                    <li data-bs-target="#carousel1" data-bs-slide-to="2"></li>
+                </ol>
+
+                <!-- Slides -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <a href=""> <img src="/img/hanuman (2).jpg" class="d-block w-100" style="height: 40rem;"
-                                alt="..."></a>
+                        <img src="/img/close-up-colorful-books-pile.jpg" class="d-block w-100" alt="Image 1">
+                        <div class="carousel-caption">
+                            <h3>Slide 1</h3>
+                            <p>Slide 1 description</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <a href=""> <img src="/img/hanuman (2).jpg" class="d-block w-100" style="height: 40rem;"
-                                alt="..."></a>
+                        <img src="/img/close-up-colorful-books-pile.jpg" class="d-block w-100" alt="Image 2">
+                        <div class="carousel-caption">
+                            <h3>Slide 2</h3>
+                            <p>Slide 2 description</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <a href=""> <img src="/img/hanuman (2).jpg" class="d-block w-100" style="height: 40rem;"
-                                alt="..."></a>
+                        <img src="/img/close-up-colorful-books-pile.jpg" class="d-block w-100" alt="Image 3">
+                        <div class="carousel-caption">
+                            <h3>Slide 3</h3>
+                            <p>Slide 3 description</p>
+                        </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                    data-bs-slide="prev">
+
+                <!-- Controls -->
+                <a class="carousel-control-prev" href="#carousel1" role="button" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-                    data-bs-slide="next">
+                </a>
+                <a class="carousel-control-next" href="#carousel1" role="button" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
-                </button>
+                </a>
             </div>
         </div>
     </section>
@@ -48,41 +66,55 @@
     <section>
         <div class="products_categories">
             <div class="categories_wrapper-1 categories_wrapper">
-                <h2>Chemistry Books</h2>
-                <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+                <div id="carousel2" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-bs-target="#carousel2" data-bs-slide-to="0" class="active"></li>
+                        <li data-bs-target="#carousel2" data-bs-slide-to="1"></li>
+                        <li data-bs-target="#carousel2" data-bs-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Slides -->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <a href=""> <img src="/img/hanuman (2).jpg" class="d-block w-100" style="height: 40rem;"
-                                    alt="..."></a>
+                            <img src="/img/close-up-colorful-books-pile.jpg" class="d-block w-100" style="height: 40rem;" alt="Image 1">
+                            <div class="carousel-caption">
+                                <h3>Slide 1</h3>
+                                <p>Slide 1 description</p>
+                            </div>
                         </div>
                         <div class="carousel-item">
-                            <a href=""> <img src="/img/hanuman (2).jpg" class="d-block w-100" style="height: 40rem;"
-                                    alt="..."></a>
+                            <img src="/img/close-up-colorful-books-pile.jpg" class="d-block w-100" style="height: 40rem;" alt="Image 2">
+                            <div class="carousel-caption">
+                                <h3>Slide 2</h3>
+                                <p>Slide 2 description</p>
+                            </div>
                         </div>
                         <div class="carousel-item">
-                            <a href=""> <img src="/img/hanuman (2).jpg" class="d-block w-100" style="height: 40rem;"
-                                    alt="..."></a>
+                            <img src="/img/close-up-colorful-books-pile.jpg" class="d-block w-100" style="height: 40rem;" alt="Image 3">
+                            <div class="carousel-caption">
+                                <h3>Slide 3</h3>
+                                <p>Slide 3 description</p>
+                            </div>
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
-                        data-bs-slide="prev">
+
+                    <!-- Controls -->
+                    <a class="carousel-control-prev" href="#carousel2" role="button" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide"
-                        data-bs-slide="next">
+                    </a>
+                    <a class="carousel-control-next" href="#carousel2" role="button" data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
-                    </button>
+                    </a>
                 </div>
-
             </div>
 
             <div class="categories_wrapper-2 categories_wrapper">
-                <h2>Physics Books</h2>
                 <div class="book-card">
                     <div class="b-img">
-                        <img src="//img/hanuman (2).jpg" alt="">
+                        <img src="/img/hanuman (2).jpg" alt="">
                     </div>
                     <div class="b-content">
                         <h3>Nutan book</h3>
@@ -95,26 +127,13 @@
                 </div>
                 <div class="book-card">
                     <div class="b-img">
-                        <img src="//img/hanuman (2).jpg" alt="">
+                        <img src="/img/hanuman (2).jpg" alt="">
                     </div>
                     <div class="b-content">
                         <h3>Nutan book</h3>
                         <div class="price">$24.55 <span>$30.5</span></div>
                         <div class="card-btn">
-                            <a href="" class="custom-btn buy-btn">Buy</a>
-                            <a href="" class="custom-btn add-to-cart">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="book-card">
-                    <div class="b-img">
-                        <img src="//img/hanuman (2).jpg" alt="">
-                    </div>
-                    <div class="b-content">
-                        <h3>Nutan book</h3>
-                        <div class="price">$24.55 <span>$30.5</span></div>
-                        <div class="card-btn">
-                            <a href="" class="custom-btn buy-btn">Buy</a>
+                            <a href="/single" class="custom-btn buy-btn">Buy</a>
                             <a href="" class="custom-btn add-to-cart">Add to cart</a>
                         </div>
                     </div>
@@ -122,31 +141,48 @@
             </div>
             <div class="categories_wrapper-3 categories_wrapper">
                 <h2>Chemistry Books</h2>
-                <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+                 <div id="carousel3" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-bs-target="#carousel3" data-bs-slide-to="0" class="active"></li>
+                        <li data-bs-target="#carousel3" data-bs-slide-to="1"></li>
+                        <li data-bs-target="#carousel3" data-bs-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Slides -->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <a href=""> <img src="/img/hanuman (2).jpg" class="d-block w-100" style="height: 40rem;"
-                                    alt="..."></a>
+                            <img src="/img/close-up-colorful-books-pile.jpg" class="d-block w-100" style="height: 40rem;" alt="Image 1">
+                            <div class="carousel-caption">
+                                <h3>Slide 1</h3>
+                                <p>Slide 1 description</p>
+                            </div>
                         </div>
                         <div class="carousel-item">
-                            <a href=""> <img src="/img/hanuman (2).jpg" class="d-block w-100" style="height: 40rem;"
-                                    alt="..."></a>
+                            <img src="/img/close-up-colorful-books-pile.jpg" class="d-block w-100" style="height: 40rem;" alt="Image 2">
+                            <div class="carousel-caption">
+                                <h3>Slide 2</h3>
+                                <p>Slide 2 description</p>
+                            </div>
                         </div>
                         <div class="carousel-item">
-                            <a href=""> <img src="/img/hanuman (2).jpg" class="d-block w-100" style="height: 40rem;"
-                                    alt="..."></a>
+                            <img src="/img/close-up-colorful-books-pile.jpg" class="d-block w-100" style="height: 40rem;" alt="Image 3">
+                            <div class="carousel-caption">
+                                <h3>Slide 3</h3>
+                                <p>Slide 3 description</p>
+                            </div>
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
-                        data-bs-slide="prev">
+
+                    <!-- Controls -->
+                    <a class="carousel-control-prev" href="#carousel3" role="button" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide"
-                        data-bs-slide="next">
+                    </a>
+                    <a class="carousel-control-next" href="#carousel3" role="button" data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
-                    </button>
+                    </a>
                 </div>
             </div>
 
@@ -154,7 +190,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-    <script src="home.js"></script>
+    <script src="/js/index.js"></script>
+    <script src="/js/home.js"></script>
 </body>
 
 </html>
