--- a/public/scss/home_scss/home.css
+++ b/public/scss/home_scss/home.css
@@ -58,13 +58,30 @@ header nav ul {
   gap: 1.5rem;
   list-style: none;
 }
-header nav .custom-btn {
+header nav .user-icon {
+  overflow: hidden;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+header nav .user-icon img {
+  height: 100%;
+  width: 100%;
+}
+header nav .user-status .login_btn .custom-btn {
   background-color: #4fb06d;
   padding: 0.5rem 1.5rem;
   text-align: center;
   color: white;
   font-size: 1.2rem;
   font-weight: 600;
+}
+.login .user-profile {
+  display: none;
+}
+
+.loged .login_btn {
+  display: none;
 }
 
 .carousel_hero {
