--- a/templates/views/workingArea.hbs
+++ b/templates/views/workingArea.hbs
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/scss/working_scss/working.css">
+    <title>Working Area</title>
 </head>
+
 <body>
-    <div class="publishing-area">
+    <div class="input-area">
         <form action="/bookStore/operations" enctype="multipart/form-data" method="post">
             <input type="text" name="book" placeholder="book.." required autocomplete="off">
+            <input type="text" name="category" placeholder=" category.." required autocomplete="off">
             <input type="file" name="img" placeholder="choose image.." required autocomplete="off">
             <input type="text" name="author" placeholder="author.." required autocomplete="off">
             <input type="date" name="publishingdate" placeholder="date.." required autocomplete="off">
+            <input type="text" name="discription" placeholder="discription.." required autocomplete="off">
             <input type="text" name="publisher" placeholder="publisher.." required autocomplete="off">
             <input type="text" name="edition" placeholder="edition.." required autocomplete="off">
             <input type="text" name="nopage" placeholder="pages.." required autocomplete="off">
@@ -20,4 +25,5 @@
         </form>
     </div>
 </body>
+
 </html>
