--- a/templates/views/singleProducts.hbs
+++ b/templates/views/singleProducts.hbs
@@ -1,14 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>categories books</title>
+    <link rel="stylesheet" href="/scss/singleProducts_scss/singleProducts.css">
+    <link rel="stylesheet" href="/scss/home_scss/home.css">
 </head>
+
 <body>
-    
+    {{>navbar}}
+    <section style="padding: 1rem;">
+        <h2 style="text-align: center;">Math Books</h2>
+        <div class="single_categories_wrapper">
+            <div class="book-card">
+                <div class="b-img">
+                    <img src="/img/hanuman (2).jpg" alt="">
+                </div>
+                <div class="b-content">
+                    <h3>Nutan book</h3>
+                    <div class="price">$24.55 <span>$30.5</span></div>
+                    <div class="card-btn">
+                        <a href="" class="custom-btn buy-btn">Buy</a>
+                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="book-card">
+                <div class="b-img">
+                    <img src="/img/hanuman (2).jpg" alt="">
+                </div>
+                <div class="b-content">
+                    <h3>Nutan book</h3>
+                    <div class="price">$24.55 <span>$30.5</span></div>
+                    <div class="card-btn">
+                        <a href="/single" class="custom-btn buy-btn">Buy</a>
+                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="book-card">
+                <div class="b-img">
+                    <img src="/img/hanuman (2).jpg" alt="">
+                </div>
+                <div class="b-content">
+                    <h3>Nutan book</h3>
+                    <div class="price">$24.55 <span>$30.5</span></div>
+                    <div class="card-btn">
+                        <a href="/single" class="custom-btn buy-btn">Buy</a>
+                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="book-card">
+                <div class="b-img">
+                    <img src="/img/hanuman (2).jpg" alt="">
+                </div>
+                <div class="b-content">
+                    <h3>Nutan book</h3>
+                    <div class="price">$24.55 <span>$30.5</span></div>
+                    <div class="card-btn">
+                        <a href="/single" class="custom-btn buy-btn">Buy</a>
+                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="book-card">
+                <div class="b-img">
+                    <img src="/img/hanuman (2).jpg" alt="">
+                </div>
+                <div class="b-content">
+                    <h3>Nutan book</h3>
+                    <div class="price">$24.55 <span>$30.5</span></div>
+                    <div class="card-btn">
+                        <a href="/single" class="custom-btn buy-btn">Buy</a>
+                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="book-card">
+                <div class="b-img">
+                    <img src="/img/hanuman (2).jpg" alt="">
+                </div>
+                <div class="b-content">
+                    <h3>Nutan book</h3>
+                    <div class="price">$24.55 <span>$30.5</span></div>
+                    <div class="card-btn">
+                        <a href="/single" class="custom-btn buy-btn">Buy</a>
+                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="book-card">
+                <div class="b-img">
+                    <img src="/img/hanuman (2).jpg" alt="">
+                </div>
+                <div class="b-content">
+                    <h3>Nutan book</h3>
+                    <div class="price">$24.55 <span>$30.5</span></div>
+                    <div class="card-btn">
+                        <a href="/single" class="custom-btn buy-btn">Buy</a>
+                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="book-card">
+                <div class="b-img">
+                    <img src="/img/hanuman (2).jpg" alt="">
+                </div>
+                <div class="b-content">
+                    <h3>Nutan book</h3>
+                    <div class="price">$24.55 <span>$30.5</span></div>
+                    <div class="card-btn">
+                        <a href="/single" class="custom-btn buy-btn">Buy</a>
+                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="book-card">
+                <div class="b-img">
+                    <img src="/img/hanuman (2).jpg" alt="">
+                </div>
+                <div class="b-content">
+                    <h3>Nutan book</h3>
+                    <div class="price">$24.55 <span>$30.5</span></div>
+                    <div class="card-btn">
+                        <a href="/single" class="custom-btn buy-btn">Buy</a>
+                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="book-card">
+                <div class="b-img">
+                    <img src="/img/hanuman (2).jpg" alt="">
+                </div>
+                <div class="b-content">
+                    <h3>Nutan book</h3>
+                    <div class="price">$24.55 <span>$30.5</span></div>
+                    <div class="card-btn">
+                        <a href="/single" class="custom-btn buy-btn">Buy</a>
+                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="/js/index.js"></script>
+    <script src="/js/singleProducts.js"></script>
 </body>
-<script>
-    
-</script>
+
 </html>
